Ensure tooltip is aligned with content instead of container

--- a/polaris-react/src/components/IndexTable/IndexTable.scss
+++ b/polaris-react/src/components/IndexTable/IndexTable.scss
@@ -285,6 +285,10 @@ $loading-panel-height: 53px;
   opacity: 1;
 }
 
+.TableHeadingSortTooltipContainer {
+  display: inline-block;
+}
+
 .TableHeadingSortWrapper {
   display: flex;
 }
